@@ -1,3 +1,7 @@
+2015-06-10  Cesar Philippidis  <cesar@codesourcery.com>
+
+	* testsuite/libgomp.oacc-c++/this.C: New test.
+
 2015-05-06  Julian Brown  <julian@codesourcery.com>
 
 	* oacc-init.c (acc_shutdown_1): Call gomp_mutex_unlock for
